# HexTerm

./: README.md  pyproject.toml  setup_environment.sh
src/: hexterm.py
src/hexterm/: game_states.py  hex_game.py  hex_ui.py
